  knock-down, to make knock-down even less brutal and frustrating.  Also sort 
  powers strongest-right on knock-down to encourage pickups before rising.

--Knock-down hearts that are added depend on difficulty of level you are being 
  knocked down into (more help when knocked down into a harder level).

--Fixed drawing glitch in power-set majority shading when a new token is pushed
  in.


Version 10   2011-February-13

--Bouncing enemy bullets are now properly killed when enemy is killed (thanks 
  Alexey Zubkov).

--Fixed bug in resetting containing enemy or token powers after knock-down.

--Fixed yet another tutorial-related crash (thanks Rico).

--Fixed bug with enemy health bars (thanks Alexey Zubkov).

--Fixed non-determinism in recorded game playback caused by synchronization 
  with music thread for flashing path to rise marker.

--Shortened delay for display of rise marker path when player standing still.

--Added % key to toggle playback display (for taking screens or videos).

--Added inverted colors for negative levels, and moved game/tutorial start up 
  to level 1.

--Added a proper end message to tutorial.

--Switched to '@' to quit, because F4 is not available on some macs.

--Fixed bug in token pass-up when grabbing tokens right before rising.

--Fixed so that health bar for self in higher level on knock-down doesn't 
  instantly appear to refill itself.

--Added secure level-stack saving on exit to thwart reload-grind strategy.

--Fixed fade bug when hearts knocked off of lower level during zoom-out.




Version 9    2011-February-9

--Added a robot-player mode for testing.

--Fixed crash on pause after picking up a token that was recently entered 
  (thanks Rico).

--Fixed a crash caused by high-level burst bullets (thanks Alexey Zubkov). 

--Fixed to stop playback and print message when end of recorded game file is
  reached (helpful for debugging).

--Display rough estimate of playback fraction on screen.
